Added projects section and added minor changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/navigation.css">
   <link rel="stylesheet" href="styles/hero.css">
   <link rel="stylesheet" href="styles/about.css">
+  <link rel="stylesheet" href="styles/projects.css">
   <link rel="stylesheet" href="styles/utils.css">
   <link rel="shortcut icon" href="icons/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,13 +94,28 @@
       <div class="about-2">
       <p>I believe in a collaborative and iterative approach to development, working closely with clients and stakeholders to understand their vision and goals. By staying up-to-date with the latest trends and best practices in web development, I strive to deliver solutions that not only meet current industry standards but also anticipate future needs.</p><br><br>
 
-      <h3>Let's Connect</h3><br><br>
+      <h3>Let's <a href="#contact" class="embedded-link">Connect</a></h3><br><br>
 
-      <p>Whether you're looking to revamp an existing website, launch a new project, or explore innovative solutions, I'm here to help. Let's collaborate and turn your ideas into reality. Feel free to reach out, and let's create something amazing together!</p>
+      <p>Whether you're looking to revamp an existing website, launch a new project, or explore innovative solutions, I'm here to help. Let's <a href="#contact" class="embedded-link">collaborate</a> and turn your ideas into reality. Feel free to reach out, and let's create something amazing together!</p>
       </div>
 
       <div class="dream-illustration">
         <img src="Icons/dream.svg" alt="Dream Illustration">
+      </div>
+    </div>
+  </section>
+
+  <section class="projects-section" id="projects">
+    <div class="my-projects-title">My Projects⫠</div>
+    <div class="cards-container">
+      <div class="project-cards">
+        <img src="Icons/transhumans-astro.svg" alt="Project preview image 1">
+      </div>
+      <div class="project-cards">
+        <img src="Icons/transhumans-fling.svg" alt="Project preview image 2">
+      </div>
+      <div class="project-cards">
+        <img src="Icons/transhumans-jumping.svg" alt="Project preview image 13">
       </div>
     </div>
   </section>
