Added a contributions section to website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/hero.css">
   <link rel="stylesheet" href="styles/about.css">
   <link rel="stylesheet" href="styles/projects.css">
+  <link rel="stylesheet" href="styles/contributions.css">
   <link rel="stylesheet" href="styles/utils.css">
   <link rel="shortcut icon" href="icons/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -100,26 +101,62 @@
       </div>
 
       <div class="dream-illustration">
-        <img src="Icons/dream.svg" alt="Dream Illustration">
+        <img class="fade-in" src="Icons/dream.svg" alt="Dream Illustration">
       </div>
     </div>
   </section>
 
   <section class="projects-section" id="projects">
-    <div class="my-projects-title">My Projects⫠</div>
+    <div class="my-projects-title">My Projects</div>
     <div class="cards-container">
       <div class="project-cards">
-        <img src="Icons/transhumans-astro.svg" alt="Project preview image 1">
+        <img class="fade-in" src="Icons/transhumans-astro.svg" alt="Project preview image 1">
       </div>
       <div class="project-cards">
-        <img src="Icons/transhumans-fling.svg" alt="Project preview image 2">
+        <img class="fade-in" src="Icons/transhumans-fling.svg" alt="Project preview image 2">
       </div>
       <div class="project-cards">
-        <img src="Icons/transhumans-jumping.svg" alt="Project preview image 13">
+        <img class="fade-in" src="Icons/transhumans-jumping.svg" alt="Project preview image 13">
       </div>
+    </div>
+    <div class="cards-info-container">
+      <div class="project-info">
+        <div class="info-title">Go Astro!</div>
+        <div class="info-sub-title">🌌Virtual Planetarium</div>
+        <div class="info-text fade-in">Embark on a cosmic journey with Go Astro!, an immersive 3D exploration of our solar system and beyond. Users can navigate through a realistic scaled representation of celestial bodies, accompanied by detailed information about planets, moons, and significant astronomical events. From historic milestones to future phenomena, this interactive platform provides a captivating journey through the cosmos.</div>
+      </div>
+      <div class="project-info">
+        <div class="info-title">Amour Planner</div>
+        <div class="info-sub-title">🌹Date Night Planner</div>
+        <div class="info-text fade-in">Plan unforgettable date nights with ease using Amour Planner, a comprehensive platform designed to help couples create memorable experiences together. As the creator of this project, I curated a diverse database of local venues, activities, and events tailored for romantic outings. With personalized recommendations based on user preferences and seamless booking options, users can effortlessly craft memorable moments that suit their unique tastes and interests.</div>
+      </div>
+      <div class="project-info">
+        <div class="info-title">CampusJim</div>
+        <div class="info-sub-title">🤸🏾‍♀️On-campus Website</div>
+        <div class="info-text fade-in">Empower your fitness journey with the [University Name] Gym website, a project specifically designed for the campus fitness center. As the architect of this platform, I implemented features to streamline gym scheduling and access to personalized fitness programs. Users can easily reserve gym sessions, join classes, and track their progress towards their fitness goals. With intuitive tools and resources, staying active and healthy has never been more convenient.</div>
+      </div>
+    </div>
+    <div class="my-projects-cta">
+      <button class="project-cta">View More</button>
     </div>
   </section>
 
+  <section class="community-contributions" id="community">
+    <article>
+      <div class="contributions-title">Community Contributions</div>
+      <div class="contributions-subTitle"><i>Contributing to Open Source Software</i></div>
+      <p>
+        I have great passion for collaborative development and the positive impact it has on communities. Therefore, I have made it a personal mission to play my part in helping open source software develop:
+      </p><br>
+
+    
+      <p>
+        I've played a part in improving various open source projects across different areas, from fixing small issues to adding new features. In communities, I've participated actively, connecting with fellow developers, users, and enthusiasts, asking questions, and helping others as part of a supportive open source community. I've also worked on making projects more accessible by improving documentation and providing support to users, believing that clear instructions and helpful resources are crucial for anyone using open source software. Sharing the benefits of open source is something I'm passionate about, and I've encouraged others to get involved through talks, blog posts, and social media, spreading the word about the value of open source. <br><br>
+        
+        Additionally, I believe in giving back to the community by helping others learn and grow, whether it's answering questions in forums or providing guidance to newcomers. Join me in exploring my contributions to open source software, and let's celebrate the collaborative spirit that drives innovation and empowers communities worldwide. Together, we can continue to make a difference through the power of open source.
+      </p>
+    </article>
+  </section>
   <script src="scripts/navigation.js"></script>
 </body>
 </html>
